--- a/MultiMediaTool/src/gui/ui/videopage.ui
+++ b/MultiMediaTool/src/gui/ui/videopage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>755</width>
-    <height>606</height>
+    <width>665</width>
+    <height>690</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -35,10 +35,10 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="begin">
    <property name="geometry">
     <rect>
-     <x>580</x>
+     <x>560</x>
      <y>20</y>
      <width>91</width>
      <height>51</height>
@@ -54,8 +54,21 @@
      <x>50</x>
      <y>90</y>
      <width>611</width>
-     <height>491</height>
+     <height>541</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="import_2">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>640</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>导入</string>
    </property>
   </widget>
  </widget>
