--- a/MultiMediaTool/icon.qrc
+++ b/MultiMediaTool/icon.qrc
@@ -11,5 +11,7 @@
         <file>rc/record.svg</file>
         <file>rc/camere.svg</file>
         <file>rc/network.svg</file>
+        <file>rc/addFile.svg</file>
+        <file>rc/export.svg</file>
     </qresource>
 </RCC>
