--- a/MultiMediaTool/src/gui/ui/ffmpegcmd.ui
+++ b/MultiMediaTool/src/gui/ui/ffmpegcmd.ui
@@ -39,6 +39,85 @@
       </widget>
      </item>
      <item>
+      <widget class="QGroupBox" name="groupBox_AIAssistant">
+       <property name="maximumSize">
+        <size>
+         <width>250</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="title">
+        <string>AI 智能助手</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+       <layout class="QVBoxLayout" name="verticalLayout_AI">
+        <item>
+         <widget class="QLabel" name="label_AIStatus">
+          <property name="text">
+           <string>AI助手已就绪</string>
+          </property>
+          <property name="styleSheet">
+           <string>color: #4CAF50; font-weight: bold;</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPlainTextEdit" name="textEdit_AIChat">
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>200</height>
+           </size>
+          </property>
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+          <property name="placeholderText">
+           <string>AI回复将显示在这里...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="lineEdit_AIInput">
+          <property name="placeholderText">
+           <string>向AI助手提问...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_AIButtons">
+          <item>
+           <widget class="QPushButton" name="btn_AISend">
+            <property name="text">
+             <string>发送</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="btn_AIClear">
+            <property name="text">
+             <string>清空</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="btn_AISettings">
+            <property name="text">
+             <string>设置</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
       <layout class="QVBoxLayout" name="verticalLayout_Command">
        <item>
         <widget class="QGroupBox" name="groupBox_Input">
