注册登录功能正常，准备修复bug添加截图功能，并且生成以一个版本信息

--- a/MultiMediaTool/icon.qrc
+++ b/MultiMediaTool/icon.qrc
@@ -13,5 +13,6 @@
         <file>rc/network.svg</file>
         <file>rc/addFile.svg</file>
         <file>rc/export.svg</file>
+        <file>rc/login.svg</file>
     </qresource>
 </RCC>
