准备发布第一版,准备添加视频剪切和合并功能

--- a/MultiMediaTool/icon.qrc
+++ b/MultiMediaTool/icon.qrc
@@ -14,5 +14,6 @@
         <file>rc/addFile.svg</file>
         <file>rc/export.svg</file>
         <file>rc/login.svg</file>
+        <file>rc/about.svg</file>
     </qresource>
 </RCC>
