refactor:更新了视频特效的输入以及dll的

--- a/MultiMediaTool/src/gui/ui/effact.ui
+++ b/MultiMediaTool/src/gui/ui/effact.ui
@@ -200,10 +200,16 @@
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
           <widget class="QToolButton" name="addFile">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="minimumSize">
             <size>
-             <width>100</width>
-             <height>60</height>
+             <width>120</width>
+             <height>80</height>
             </size>
            </property>
            <property name="text">
@@ -217,10 +223,16 @@
          </item>
          <item>
           <widget class="QToolButton" name="exportFile">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="minimumSize">
             <size>
-             <width>100</width>
-             <height>60</height>
+             <width>120</width>
+             <height>80</height>
             </size>
            </property>
            <property name="text">
@@ -236,6 +248,40 @@
        </item>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item>
+          <widget class="QSpinBox" name="spinBoxArgs1"/>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="spinBoxArgs2"/>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="spinBoxArgs3"/>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="spinBoxArgs4"/>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="spinBoxArgs5"/>
+         </item>
+         <item>
+          <widget class="QDoubleSpinBox" name="doubleSpinBoxArgs1"/>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="argLine1">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>300</width>
+             <height>0</height>
+            </size>
+           </property>
+          </widget>
+         </item>
          <item>
           <widget class="QPushButton" name="ok">
            <property name="text">
