fix: 修复了concat页面的显示问题

--- a/MultiMediaTool/src/gui/ui/videopage.ui
+++ b/MultiMediaTool/src/gui/ui/videopage.ui
@@ -58,6 +58,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="flashbutton">
+       <property name="text">
+        <string>刷新</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="import_2">
        <property name="text">
         <string>导入</string>
